--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -116,7 +116,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/d3-2.9.1.min.js"></script>
     <script src="js/colorbrewer.js"></script>
-    <script src="js/ambrose.js"></script>
+    <!--<script src="js/ambrose.js"></script>-->
+    <script src="js/ambrose-ui.js"></script>
 
   </body>
 </html>
