--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -61,21 +61,8 @@
         <div class="span6" id="chart"></div>
         <div class="span6">
           <table id="job-props" class="table">
-            <thead>
-              <tr>
-                <th>Property</th>
-                <th>Value</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr><td>Number</td><td id="job-n-of-n"></td></tr>
-              <tr><td>Job ID</td><td><a id="job-jt-url" target="_blank"></a></td></tr>
-              <tr><td>Aliases</td><td id="job-aliases"></td></tr>
-              <tr><td>Features</td><td id="job-features"></td></tr>
-              <tr><td>Status</td><td id="job-status"></td></tr>
-              <tr><td>Mappers</td><td id="job-mapper-status"></td></tr>
-              <tr><td>Reducers</td><td id="job-reducer-status"></td></tr>
-            </tbody>
+            <thead></thead>
+            <tbody></tbody>
           </table>
         </div>
       </div>
@@ -83,20 +70,8 @@
       <div class="row">
         <div class="span12">
           <table id="job-summary" class="table table-striped">
-            <thead>
-              <tr>
-                <th></th>
-                <th>Job ID</th>
-                <th>Status</th>
-                <th>Aliases</th>
-                <th>Features</th>
-                <th>Mappers</th>
-                <th>Reducers</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr></tr>
-            </tbody>
+            <thead></thead>
+            <tbody></tbody>
           </table>
         </div>
       </div>
