--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -101,6 +101,7 @@
         var defaultDetailView = new AMBROSE.detailView();
         var defaultTableView = new AMBROSE.tableView();
 
+        //TODO: remove this. Just for testing extensibility
         AMBROSE.cascadingDetailView = function () {
 
           return {
@@ -134,7 +135,7 @@
           //customDetailView.init(ui);
           defaultTableView.init(ui);
           chordView.init(ui);
-          $(ui).initialize();
+          ui.init();
         });
     </script>
 
