Chaning runtimeName to runtime and minor edits per Andy's comments.

--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -123,8 +123,8 @@
             },
 
             supportsJob: function(data) {
-              return (data.event && data.event.runtimeName == 'cascading') ||
-                     (data.job && data.job.runtimeName == 'cascading');
+              return (data.event && data.event.runtime == 'cascading') ||
+                     (data.job && data.job.runtime == 'cascading');
             }
           };
         }
