--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -56,14 +56,11 @@
       </div>
 
       <div class="row">
-        <!-- tab nav -->
-        <div class="span12">
+        <!-- chart tabs -->
+        <div class="span6 tabbable">
           <ul class="nav nav-tabs" id="vizTabs" style="display:none"></ul>
           <div class="tab-content" id="vizGroup"></div>
         </div>
-
-        <!-- chart -->
-        <div class="span6" id="chart"></div>
         <!-- details pane -->
         <div class="span6">
           <table id="job-props" class="table">
@@ -99,13 +96,13 @@
     <script src="js/ambrose-detail.js"></script>
     <script src="js/ambrose-table.js"></script>
     <script src="js/ambrose-chord.js"></script>
-    <!--<script src="js/ambrose-dag.js"></script>-->
+    <script src="js/ambrose-dag.js"></script>
     <script type="text/javascript">
       var ui = AMBROSE.ui();
       var detail = AMBROSE.detail(ui);
       var table = AMBROSE.table(ui);
       var chord = AMBROSE.chord(ui);
-//      var dag = AMBROSE.dag(ui);
+      //var dag = AMBROSE.dag(ui);
 
       $(document).ready(function() {
         ui.load();
