Uncomments dag and fixes logic for chart tab display

--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -58,7 +58,7 @@
       <div class="row">
         <!-- chart tabs -->
         <div class="span6 tabbable">
-          <ul class="nav nav-tabs" id="vizTabs" style="display:none"></ul>
+          <ul class="nav nav-tabs" id="vizTabs"></ul>
           <div class="tab-content" id="vizGroup"></div>
         </div>
         <!-- details pane -->
@@ -102,7 +102,7 @@
       var detail = AMBROSE.detail(ui);
       var table = AMBROSE.table(ui);
       var chord = AMBROSE.chord(ui);
-      //var dag = AMBROSE.dag(ui);
+      var dag = AMBROSE.dag(ui);
 
       $(document).ready(function() {
         ui.load();
