attempts to get dag and chord rendering

--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -102,7 +102,7 @@
       var detail = AMBROSE.detail(ui);
       var table = AMBROSE.table(ui);
       var chord = AMBROSE.chord(ui);
-      //var dag = AMBROSE.dag(ui);
+      var dag = AMBROSE.dag(ui);
 
       $(document).ready(function() {
         ui.load();
