Refactors chart, dag js and adds parent "class" chart

--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -95,6 +95,7 @@
     <script src="js/ambrose-util.js"></script>
     <script src="js/ambrose-detail.js"></script>
     <script src="js/ambrose-table.js"></script>
+    <script src="js/ambrose-chart.js"></script>
     <script src="js/ambrose-chord.js"></script>
     <script src="js/ambrose-dag.js"></script>
     <script type="text/javascript">
