Add require js.

--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -79,29 +79,6 @@
       </footer>
     </div> <!-- /container -->
 
-    <script src="js/jquery-1.7.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/d3-2.9.1.min.js"></script>
-    <script src="js/jit-2.0.1.yc.js"></script>
-    <script src="js/colorbrewer.js"></script>
-    <script src="js/ambrose-ui.js"></script>
-    <script src="js/ambrose-util.js"></script>
-    <script src="js/ambrose-detail.js"></script>
-    <script src="js/ambrose-table.js"></script>
-    <script src="js/ambrose-chart.js"></script>
-    <script src="js/ambrose-chord.js"></script>
-    <script src="js/ambrose-dag.js"></script>
-    <script type="text/javascript">
-      var ui = AMBROSE.ui();
-      var detail = AMBROSE.detail(ui);
-      var table = AMBROSE.table(ui);
-      var chord = AMBROSE.chord(ui);
-      var dag = AMBROSE.dag(ui);
-
-      $(document).ready(function() {
-        ui.load();
-      });
-    </script>
-
+    <script data-main="js/main" src="js/require-jquery.js"></script>
   </body>
 </html>
