--- a/common/src/main/resources/web/index.html
+++ b/common/src/main/resources/web/index.html
@@ -4,17 +4,11 @@
     <meta charset="utf-8">
     <title>Ambrose</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Pig pipeline visualization and monitoring">
+    <meta name="description" content="Data workflow visualization and monitoring">
     <meta name="author" content="Twitter">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/ambrose.css" rel="stylesheet">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-    </style>
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="css/ambrose.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -81,7 +75,7 @@
 
     <script src="js/jquery-1.7.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/d3-2.9.6.min.js"></script>
+    <script src="js/d3-2.9.6.js"></script>
     <script src="js/jit-2.0.1.yc.js"></script>
     <script src="js/colorbrewer.js"></script>
     <script src="js/ambrose-ui.js"></script>
