Fixed Javascript issue when there's only one job

--- a/pig/src/main/resources/web/index.html
+++ b/pig/src/main/resources/web/index.html
@@ -81,7 +81,8 @@
 
     <script src="js/jquery-1.7.2.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/d3-2.9.1.min.js"></script>
+    <!--script src="js/d3-2.9.1.min.js"></script-->
+    <script src="js/d3-2.9.6.js"></script>
     <script src="js/jit-2.0.1.yc.js"></script>
     <script src="js/colorbrewer.js"></script>
     <script src="js/ambrose-ui.js"></script>
