Adds support for uri search param 'workflowId'

--- a/common/src/main/resources/web/index.html
+++ b/common/src/main/resources/web/index.html
@@ -28,10 +28,10 @@
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="brand" href="#">Ambrose</a>
-          <ul class="nav">
-            <li class="active">
-              <a href="/">Home</a>
-            </li>
+          <ul id="navbar" class="nav pull-left">
+            <li><a href="dashboard">Dashboard</a></li>
+          </ul>
+          <ul class="nav pull-right">
             <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
           </ul>
         </div>
