Upgrades Bootstrap, fixes some small issues

--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -7,7 +7,6 @@
     <meta name="description" content="Data workflow visualization and monitoring">
     <meta name="author" content="Twitter">
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
     <link href="css/ambrose.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -24,12 +23,12 @@
   <body>
 
     <!-- navbar -->
-    <div class="navbar navbar-fixed-top">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
           <a class="brand" href="#">Ambrose</a>
           <ul id="navbar" class="nav pull-left">
-            <li><a href="dashboard">Dashboard</a></li>
+            <li><a href="/">Dashboard</a></li>
           </ul>
           <ul class="nav pull-right">
             <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
