Updates main.js and workflow.html and removes test resources

--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -44,8 +44,8 @@
       </div>
 
       <div class="row-fluid" id="diagrams">
-        <div class="span3" id="ambrose-views-chord"></div>
-        <div class="span9" id="ambrose-views-graph"></div>
+        <div class="span4" id="ambrose-views-chord"></div>
+        <div class="span8" id="ambrose-views-graph"></div>
       </div>
 
       <div class="row-fluid">
@@ -58,7 +58,7 @@
       </footer>
     </div> <!-- /container-fluid -->
 
-    <script data-main="js/test" src="js/require-jquery.js"></script>
+    <script data-main="js/main" src="js/require-jquery.js"></script>
 
   </body>
 </html>
