--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Data workflow visualization and monitoring">
     <meta name="author" content="Twitter">
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+
     <link href="css/ambrose.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -24,16 +24,21 @@
   <body>
 
     <!-- navbar -->
-    <div class="navbar navbar-fixed-top navbar-inverse">
+    <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
           <a class="brand" href="#">Ambrose</a>
-          <ul id="navbar" class="nav pull-left">
-            <li><a href="/">Dashboard</a></li>
-          </ul>
-          <ul class="nav pull-right">
-            <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
-          </ul>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+              <li><a href="/">Dashboard</a></li>
+              <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
