--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -12,7 +12,7 @@
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+      <script src="js/html5shiv.js"></script>
     <![endif]-->
 
     <!-- fav and touch icons -->
