--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -45,16 +45,16 @@
 
     <div class="container-fluid">
       <div class="row-fluid">
-        <div class="span12" id="ambrose-views-progress-bar"></div>
+        <div class="span12" id="ambrose-view-progress-bar"></div>
       </div>
 
       <div class="row-fluid" id="diagrams">
-        <div class="span6" id="ambrose-views-chord"></div>
-        <div class="span6" id="ambrose-views-graph"></div>
+        <div class="span6" id="ambrose-view-chord"></div>
+        <div class="span6" id="ambrose-view-graph"></div>
       </div>
 
       <div class="row-fluid">
-        <div class="span12" id="ambrose-views-table"></div>
+        <div class="span12" id="ambrose-view-table"></div>
       </div>
 
       <hr>
@@ -66,7 +66,7 @@
     <script type="text/javascript">
       var require = {
         waitSeconds: 15,
-        urlArgs : "bust="+new Date().getTime(),
+        urlArgs : "bust=" + new Date().getTime(),
       };
     </script>
     <script data-main="js/main" src="js/require-jquery.js"></script>
