Adds meta tags to avoid google translate suggestions

--- a/common/src/main/resources/web/dashboard.html
+++ b/common/src/main/resources/web/dashboard.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
     <title>Ambrose Dashboard</title>
+    <meta charset="utf-8">
+    <meta name="google" value="notranslate">
+    <meta http-equiv="Content-Language" content="en_US">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Data workflow visualization and monitoring">
     <meta name="author" content="Twitter">
