--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -13,7 +13,7 @@
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
-      <script src="js/html5shiv.js"></script>
+      <script src="js/lib/html5shiv.js"></script>
     <![endif]-->
 
     <!-- fav and touch icons -->
@@ -65,13 +65,9 @@
       </footer>
     </div> <!-- /container-fluid -->
 
-    <script type="text/javascript">
-      var require = {
-        waitSeconds: 15,
-        urlArgs : "bust=" + new Date().getTime(),
-      };
-    </script>
-    <script data-main="js/workflow-main" src="js/require-jquery.js"></script>
+    <script src="js/lib/require.js"></script>
+    <script src="js/require-config.js"></script>
+    <script src="js/workflow.js"></script>
 
   </body>
 </html>
