Adds createdAt field to WorkflowSummary

--- a/common/src/main/resources/web/dashboard.html
+++ b/common/src/main/resources/web/dashboard.html
@@ -67,6 +67,7 @@
             <tr>
               <th>#</th>
               <th>User</th>
+              <th>Start</th>
               <th>Name</th>
               <th>Status</th>
               <th>Progress</th>
