Adds workflow actions "Replay" and "Jump to end"

--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -37,6 +37,15 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li><a href="dashboard.html">Dashboard</a></li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                  Workflow
+                  <b class="caret"></b>
+                </a>
+                <ul id="workflow-dropdown" class="dropdown-menu">
+                  <!-- workflow actions inserted here -->
+                </ul>
+              </li>
             </ul>
             <ul class="nav pull-right">
               <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
