Removes h2 "Workflows" and updates margines of status line

--- a/common/src/main/resources/web/dashboard.html
+++ b/common/src/main/resources/web/dashboard.html
@@ -67,8 +67,7 @@
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12">
-          <h2>Workflows</h2>
-          <p class="lead">
+          <p class="dashboard-status lead">
             Workflows on cluster
             <strong id="current-cluster" class=""></strong>
             with status
