--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Twitter">
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/ambrose.css" rel="stylesheet">
+    <link href="css/jquery-ui.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -22,8 +23,8 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
   </head>
-  <body>
 
+  <body>
     <!-- navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
@@ -46,6 +47,15 @@
                   <!-- workflow actions inserted here -->
                 </ul>
               </li>
+
+              <li class="dropdown">
+                <a class="dropdown-toggle" id="moreOptions" data-toggle="dropdown" href="#">
+
+                </a>
+                <!-- script-view related actions inserted here -->
+                <ul id="script-view-dropdown" class="dropdown-menu">
+                </ul>
+              </li>
             </ul>
             <ul class="nav pull-right">
               <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
@@ -55,11 +65,12 @@
       </div>
     </div>
 
+    <div class="modal hidden" id="scriptDiv" ><div id="scriptContent"></div></div>
+
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span12" id="ambrose-view-progress-bar"></div>
       </div>
-
       <div class="row-fluid" id="diagrams">
         <div class="span12" id="ambrose-view-graph"></div>
       </div>
@@ -73,107 +84,9 @@
         <p>&copy; Twitter 2013</p>
       </footer>
     </div> <!-- /container-fluid -->
-    <div id="testdiv" style="left: 30px; top: 50px;" onMouseDown="dragStart(event, 'testdiv')">
-      <p>Movable Div Test</p>
-    </div>
-
-    <script type="text/javascript">
-    function getID(id)
-    {
-      return document.getElementById(id);
-    }
-    // Global object to hold drag information.
-    var dragObj = new Object();
-    function dragStart(event, id) {
-      var x, y;
-      dragObj.elNode = getID(id);
-      // Get cursor position with respect to the page.
-      try {
-        x = window.event.clientX + document.documentElement.scrollLeft
-          + document.body.scrollLeft;
-        y = window.event.clientY + document.documentElement.scrollTop
-          + document.body.scrollTop;
-      }
-      catch (e) {
-        x = event.clientX + window.scrollX;
-        y = event.clientY + window.scrollY;
-      }
-    // Save starting positions of cursor and element.
-     dragObj.cursorStartX = x;
-      dragObj.cursorStartY = y;
-      dragObj.elStartLeft  = parseInt(dragObj.elNode.style.left, 10);
-      dragObj.elStartTop   = parseInt(dragObj.elNode.style.top,  10);
-      if (isNaN(dragObj.elStartLeft)) dragObj.elStartLeft = 0;
-      if (isNaN(dragObj.elStartTop))  dragObj.elStartTop  = 0;
-      // Capture mousemove and mouseup events on the page.
-      try {
-        document.attachEvent("onmousemove", dragGo);
-        document.attachEvent("onmouseup",   dragStop);
-        window.event.cancelBubble = true;
-        window.event.returnValue = false;
-      }
-      catch (e) {
-        document.addEventListener("mousemove", dragGo,   true);
-        document.addEventListener("mouseup",   dragStop, true);
-        event.preventDefault();
-      }
-    }
-    function dragGo(event) {
-     var x, y;
-    // Get cursor position with respect to the page.
-    try  {
-        x = window.event.clientX + document.documentElement.scrollLeft
-          + document.body.scrollLeft;
-        y = window.event.clientY + document.documentElement.scrollTop
-          + document.body.scrollTop;
-      }
-      catch (e) {
-        x = event.clientX + window.scrollX;
-        y = event.clientY + window.scrollY;
-      }
-      // Move drag element by the same amount the cursor has moved.
-      var drLeft = (dragObj.elStartLeft + x - dragObj.cursorStartX);
-      var drTop = (dragObj.elStartTop  + y - dragObj.cursorStartY);
-      if (drLeft > 0)
-      {
-         dragObj.elNode.style.left = drLeft  + "px";
-      }
-      else
-      {
-      dragObj.elNode.style.left = "1px";
-      }
-      if (drTop > 0)
-      {
-         dragObj.elNode.style.top  = drTop + "px";
-      }
-      else
-      {
-      dragObj.elNode.style.top  = "1px";
-      }
-      try {
-        window.event.cancelBubble = true;
-        window.event.returnValue = false;
-      }
-      catch(e){
-        event.preventDefault();
-      }
-    }
-    function dragStop(event) {
-      // Stop capturing mousemove and mouseup events.
-      try {
-        document.detachEvent("onmousemove", dragGo);
-        document.detachEvent("onmouseup",   dragStop);
-      }
-      catch (e) {
-        document.removeEventListener("mousemove", dragGo,   true);
-        document.removeEventListener("mouseup",   dragStop, true);
-      }
-    }
-    </script>
 
     <script src="js/lib/require.js"></script>
     <script src="js/require-config.js"></script>
     <script src="js/workflow.js"></script>
-
   </body>
 </html>
