Modified the pig script view.

--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -48,14 +48,7 @@
                 </ul>
               </li>
 
-              <li class="dropdown">
-                <a class="dropdown-toggle" id="moreOptions" data-toggle="dropdown" href="#">
-
-                </a>
-                <!-- script-view related actions inserted here -->
-                <ul id="script-view-dropdown" class="dropdown-menu">
-                </ul>
-              </li>
+              <li><a id="moreOptions"></a></li>
             </ul>
             <ul class="nav pull-right">
               <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
