Script View Small Fixes.

--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -58,7 +58,9 @@
       </div>
     </div>
 
-    <div class="modal hidden" id="scriptDiv" ><div id="scriptContent"></div></div>
+    <div class="modal hidden" id="scriptDiv" >
+      <div id="scriptContent"></div>
+    </div>
 
     <div class="container-fluid">
       <div class="row-fluid">
