--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -48,7 +48,7 @@
                 </ul>
               </li>
 
-              <li><a id="moreOptions"></a></li>
+              <li><a id="showScript"></a></li>
             </ul>
             <ul class="nav pull-right">
               <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
