- Added a pseudo-edge to handle hover. - Removed the close button on the popover. - Popover disappears if user mouseleave the popover

--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -53,8 +53,9 @@
                 <a ref="#" data-toggle="dropdown" class="dropdown-toggle">
                   Settings <b class="caret"></b>
                 </a>
-                <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu2">
+                <ul class="dropdown-menu" role="menu" aria-labelledby="settingsDropdown">
                   <li role="presentation" class="dropdown-header">Edge Scaled By</li>
+                  <li><a href="#" class="edgeScaleOpt" id="noEdgeScaling">No Edge Scaling</a></li>
                   <li><a href="#" class="edgeScaleOpt" id="hdfsBytesWritten">Source HDFS Bytes Written</a></li>
                   <li><a href="#" class="edgeScaleOpt" id="reduceOutputRecords">Source Reduce Output Records</a></li>
                   <li><a href="#" class="edgeScaleOpt" id="mapInputRecords">Destination Map Input Records</a></li>
