More refactor, decode pig.script at client side instead.

--- a/common/src/main/resources/web/workflow.html
+++ b/common/src/main/resources/web/workflow.html
@@ -36,7 +36,7 @@
           </button>
           <a class="brand" href="#">Ambrose</a>
           <div class="nav-collapse collapse">
-            <ul class="nav">
+            <ul class="nav leftList">
               <li><a href="dashboard.html">Dashboard</a></li>
               <li class="dropdown">
                 <a class="dropdown-toggle" data-toggle="dropdown" href="#">
@@ -47,8 +47,6 @@
                   <!-- workflow actions inserted here -->
                 </ul>
               </li>
-
-              <li><a id="showScript"></a></li>
             </ul>
             <ul class="nav pull-right">
               <li><a target="_blank" href="https://github.com/twitter/ambrose">About</a></li>
